# HMM4GA

./: CMakeLists.txt  DynamicMatrix.cpp  DynamicMatrix.h  PairHMM.cpp  PairHMM.h  ProbabilityMatrix.cpp  ProbabilityMatrix.h  README.md  Sequence.cpp  Sequence.h  SequenceGenerator.cpp  SequenceGenerator.h  StateTransitionMatrix.cpp  StateTransitionMatrix.h  main.cpp
